fix(visualization): improve center map button positioning and icon alignment
- Add explicit top positioning to prevent layout shifts

- Use flexbox for proper icon centering instead of margin hack

- Reduce icon size from 28px to 20px to fit button better

--- a/visualization/app/codeCharta/ui/viewCube/centerMapButton/centerMapButton.component.scss
+++ b/visualization/app/codeCharta/ui/viewCube/centerMapButton/centerMapButton.component.scss
@@ -2,20 +2,20 @@
 
 button {
     position: absolute;
+    top: 0;
     right: 15px;
     width: 36px;
     height: 36px;
-    font-size: 28px;
-    border-radius: 100%;
+    font-size: 20px;
+    border-radius: 50%;
     color: white;
     background-color: variables.$cc-primary-color;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
     &.cc-shadow {
         box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.2) !important;
-    }
-
-    i {
-        margin-top: 2px;
     }
 
     &:hover {
